# strawman

./: .coverage  .gitignore  .pre-commit-config.yaml  Makefile  coverage.xml  metadata.yaml  notebook.py  pyproject.toml
data/: attempt2.parquet  cardiogram_165undefined_filtered.csv  final_evidence.tsv
src/strawman/: __init__.py  evidence_matrix.py  metadata.py
